<?xml version="1.0"?>
<package format="2">
  
  <name>mrs_vins_imu_filter</name>
  <version>0.1.0</version>
  <description>The mrs_vins_imu_filter package</description>

  <author email="bednaj14@fel.cvut.cz">Jan Bednar</author>
  <maintainer email="pritzvac@fel.cvut.cz">Vaclav Pritzl</maintainer>

  <license>BSD 3-Clause</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>
</package>
